# Robotics-project

0_common/brain/: CMakeLists.txt  package.xml
0_common/brain/launch/: brain.launch
0_common/brain/src/: brain.py  brain2.py  brain3.py  brain4.py  copy_brain4.py  temp.py  test.py
0_common/common_msgs/robp_msgs/: package.xml
0_common/depthimage_to_laserscan/cfg/: Depth.cfg
0_common/depthimage_to_laserscan/launch/: launchfile_sample.launch
0_common/robp_phidgets/launch/: phidgets.launch
0_common/rviz/: fff.rviz  frameFinder.rviz  rviz_ms1_config.rviz
0_common/transforms/: CMakeLists.txt  package.xml
0_common/transforms/launch/: all_transform.launch  all_transform2.launch
0_common/transforms/src/: odometry.py  transform_odom_camera.py
1_drivers/usb_cam/launch/: usb_cam.launch
2_perception/: NOTES  NOTES20230427
2_perception/perception/: 2023-03-30-123931.webm  CMakeLists.txt  package.xml  perceptionoldkinda.py
2_perception/perception/scripts/: detector.py  perception.py  train.py  utils.py  webbis.py
3_control/arm_control/: CMakeLists.txt
3_control/arm_control/scripts/: ik_controller.py  ik_controller2.py  ik_controller3.py
3_control/path_planning/path_follower/: CMakeLists.txt  README.md  package.xml
3_control/path_planning/path_follower/launch/: path_follower.launch
3_control/path_planning/path_follower/scripts/: cartesian_controller.py  cartesian_controller_pre.py  generate_trajectory.py  pure_pursuit.py  pure_pursuit_pre.py
3_control/path_planning/path_generation/: CMakeLists.txt  package.xml
3_control/path_planning/pi_controller/: CMakeLists.txt  package.xml
4_estimation/SLAM/: CMakeLists.txt  package.xml
4_estimation/SLAM/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
4_estimation/SLAM/launch/: slam.launch
4_estimation/SLAM/src/: am_detector.py  angleMapOdom.py  aruco_anchor.py  discreteWorkspace(2).py  (+12 more)
4_estimation/localization/: CMakeLists.txt  package.xml
5_system_integration/: README.md
(+46 files in other folders)
